--- a/ToDoFinalApp/ToDoFinalApp.entitlements
+++ b/ToDoFinalApp/ToDoFinalApp.entitlements
@@ -7,7 +7,6 @@
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
 		<string>iCloud.$(CFBundleIdentifier)</string>
-		<string>iCloud.com.las.ToDoFinalApp</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -15,5 +14,9 @@
 	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.com.las.FinalAppToDo</string>
+	</array>
 </dict>
 </plist>
