--- a/ToDoFinalApp/ToDoFinalApp.entitlements
+++ b/ToDoFinalApp/ToDoFinalApp.entitlements
@@ -16,7 +16,7 @@
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.las.ToDoFinalApp.TodayWidget</string>
+		<string>group.com.las.ToDoFinalApp.TodayWidget</string>
 	</array>
 </dict>
 </plist>
