--- a/ToDoFinalApp.xcodeproj/xcshareddata/xcschemes/ToDoFinalAppTests.xcscheme
+++ b/ToDoFinalApp.xcodeproj/xcshareddata/xcschemes/ToDoFinalAppTests.xcscheme
@@ -5,22 +5,6 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "ACCB9C10C8FA92F76B59B0C34E2F70F1"
-               BuildableName = "libPods-ToDoFinalAppUITests.a"
-               BlueprintName = "Pods-ToDoFinalAppUITests"
-               ReferencedContainer = "container:Pods.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -28,6 +12,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8CAD827621BEE99C008AE224"
+               BuildableName = "ToDoFinalAppTests.xctest"
+               BlueprintName = "ToDoFinalAppTests"
+               ReferencedContainer = "container:ToDoFinalApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <AdditionalOptions>
       </AdditionalOptions>
@@ -42,15 +36,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "ACCB9C10C8FA92F76B59B0C34E2F70F1"
-            BuildableName = "libPods-ToDoFinalAppUITests.a"
-            BlueprintName = "Pods-ToDoFinalAppUITests"
-            ReferencedContainer = "container:Pods.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
