--- a/ToDoFinalApp.xcodeproj/xcshareddata/xcschemes/ToDoFinalAppUITests.xcscheme
+++ b/ToDoFinalApp.xcodeproj/xcshareddata/xcschemes/ToDoFinalAppUITests.xcscheme
@@ -5,22 +5,6 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "ACCB9C10C8FA92F76B59B0C34E2F70F1"
-               BuildableName = "libPods-ToDoFinalAppUITests.a"
-               BlueprintName = "Pods-ToDoFinalAppUITests"
-               ReferencedContainer = "container:Pods.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -28,7 +12,26 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8CAD828121BEE99C008AE224"
+               BuildableName = "ToDoFinalAppUITests.xctest"
+               BlueprintName = "ToDoFinalAppUITests"
+               ReferencedContainer = "container:ToDoFinalApp.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8CAD825F21BEE99B008AE224"
+            BuildableName = "ToDoFinalApp.app"
+            BlueprintName = "ToDoFinalApp"
+            ReferencedContainer = "container:ToDoFinalApp.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -42,15 +45,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "ACCB9C10C8FA92F76B59B0C34E2F70F1"
-            BuildableName = "libPods-ToDoFinalAppUITests.a"
-            BlueprintName = "Pods-ToDoFinalAppUITests"
-            ReferencedContainer = "container:Pods.xcodeproj">
+            BlueprintIdentifier = "8CAD825F21BEE99B008AE224"
+            BuildableName = "ToDoFinalApp.app"
+            BlueprintName = "ToDoFinalApp"
+            ReferencedContainer = "container:ToDoFinalApp.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -60,6 +64,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8CAD825F21BEE99B008AE224"
+            BuildableName = "ToDoFinalApp.app"
+            BlueprintName = "ToDoFinalApp"
+            ReferencedContainer = "container:ToDoFinalApp.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
