--- a/MyWidget/MyWidget.entitlements
+++ b/MyWidget/MyWidget.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.las.ToDoFinalApp.TodayWidget</string>
+		<string>group.com.las.ToDoFinalApp2.TodayWidget2</string>
 	</array>
 </dict>
 </plist>
