--- a/ToDoFinalApp.xcodeproj/xcshareddata/xcschemes/ToDoFinalApp.xcscheme
+++ b/ToDoFinalApp.xcodeproj/xcshareddata/xcschemes/ToDoFinalApp.xcscheme
@@ -61,6 +61,12 @@
             ReferencedContainer = "container:ToDoFinalApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-com.apple.CoreData.SQLDebug 1"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
